--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.6.7",
         "next": "14.0.4",
+        "next-auth": "^4.24.6",
         "react": "^18",
         "react-dom": "^18"
     },
