--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.3.1",
+        "antd": "^5.15.1",
         "axios": "^1.6.7",
         "next": "14.0.4",
         "next-auth": "^4.24.6",
