--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.3.1",
+        "@nivo/line": "^0.85.1",
+        "@nivo/pie": "^0.85.1",
         "antd": "^5.15.1",
         "axios": "^1.6.7",
+        "dayjs": "^1.11.10",
         "next": "14.0.4",
         "next-auth": "^4.24.6",
         "react": "^18",
