--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "next": "14.0.4",
         "next-auth": "^4.24.6",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-svg-worldmap": "^2.0.0-alpha.16"
     },
     "devDependencies": {
         "@types/node": "^20",
