--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
         "next-auth": "^4.24.6",
         "react": "^18",
         "react-dom": "^18",
-        "react-svg-worldmap": "^2.0.0-alpha.16"
+        "react-svg-worldmap": "^2.0.0-alpha.16",
+        "react-syntax-highlighter": "^15.5.0"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "prettier": "3.1.1",
         "typescript": "^5"
     }
